bad/assign_new_class_class_side.example_compiler_output
ERROR
[1mbad/assign_new_class_class_side.lat:7:8: [1;31merror: [0;1mleft side is not assignable[m
	new Y = new Z;
	      [1;32m^[m
[1mbad/assign_new_class_class_side.lat:7:2: [1;34mnote: [0;1mleft side starts here[m
	new Y = new Z;
	[1;32m^[m
